--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "firebase": "^5.7.1",
+    "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-foundation": "^0.9.6",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
