--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
     "firebase": "^5.7.1",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-foundation": "^0.9.6",
-    "react-scripts": "^2.1.2"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,5 +29,18 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bcavenagh/social.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/bcavenagh/social/issues"
+  },
+  "homepage": "https://github.com/bcavenagh/social#readme"
 }
